--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
